Fixed alignment

--- a/src/styles/rank.module.css
+++ b/src/styles/rank.module.css
@@ -24,4 +24,5 @@
     width: 163px;
     height: 163px;
     min-height: 163px;
+    margin-top: 5rem;
 }
